# dr_source

./: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  KNOWLEDGEBASE.md  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
dr_source/: __init__.py  analyzer.py  api.py  cli.py  java_ast_vuln_detector.py  logging.py  re_vulnerability_detector.py  scan_database.py  ss_analyzer.py  taint_analyzer.py  vulnerability.py
dr_source/config/: knowledge_base.yaml
dr_source/core/: codebase.py  db.py  detection_rules.py  knowledge_base.py  project_index.py  scanner.py  taint.py  taint_detector.py  taint_visitor.py  usage.py  utils.py
dr_source/core/detectors/: __init__.py  base.py  command_injection.py  crypto.py  deprecated_api.py  ssrf.py  (+14 more)
dr_source/reports/: ascii.py  sarif.py
tests/: test_ast_scanner.py  test_ast_sql_injection_taint.py  test_db.py  test_deprecated_api.py  test_detectors.py  test_file_inclusion.py  test_hardcoded_credentials.py  test_information_disclosure.py  test_insecure_cookie.py  test_insecure_reflection.py  test_inter_file_analysis.py  test_jndi_injection.py  test_open_redirect.py  test_pattern_unification.py  test_scanner.py  test_scanner_ast_mode.py  test_session_fixation.py  test_taint.py
tests/core/: test_knowledge_base.py  test_knowledge_base_merge.py  test_timeout.py
tests/plugins/: test_dependency_analyzer.py  test_django_mapping.py  test_fastapi_mapping.py  test_java_ast_analyzer.py  test_java_extra_frameworks.py  test_javascript_analyzer.py  test_multilang_pattern_analyzer.py  test_php_analyzer.py  test_python_ast_analyzer.py  test_regex_analyzer.py  test_ruby_analyzer.py  test_spring_mapping.py
(+66 files in other folders)
